--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,7 @@ spring:
   flyway:
     enabled: true
     baseline-on-migrate: true
+
+jwt:
+      secret: ${JWT_SECRET:default_super_secure_secret_key_for_local_development_must_be_at_least_512_bits_long_for_hs512}
+      expiration: 86400000
